<resources>
    <string name="app_name">News Feed</string>
    <string name="no_news_text">No News</string>
    <string name="place_news_title">News Title</string>
    <string name="place_news_section">News Section Name</string>
    <string name="place_author_name">Sabdar Shaik</string>
    <string name="place_news_date">28-08-2018 08:30 PM</string>
    <string name="no_network_text">No Internet Connection</string>
    <string name="action_settings">Settings</string>
    <string name="settings_title">News Settings</string>


    <string name="settings_news_items_limit_label">News Items Limit</string>
    <string name="settings_news_items_limit_key" translatable="false">news_limit</string>
    <string name="settings_news_items_limit_default_value" translatable="false">10</string>

    <string name="settings_news_type_label">News Type</string>
    <string name="settings_news_type_key" translatable="false">news_type</string>
    <string name="settings_news_type_default_value" translatable="false">@string/settings_news_type_article_value</string>

    <string name="settings_news_type_article_label">Article</string>
    <string name="settings_news_type_article_value" translatable="false">article</string>

    <string name="settings_news_type_audio_label">Audio</string>
    <string name="settings_news_type_audio_value" translatable="false">audio</string>

    <string name="settings_news_type_video_label">Video</string>
    <string name="settings_news_type_video_value" translatable="false">video</string>

    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">news_order_by</string>
    <string name="settings_order_by_default_value" translatable="false">@string/settings_order_by_newest_value</string>

    <string name="settings_order_by_newest_label">Newest</string>
    <string name="settings_order_by_newest_value" translatable="false">newest</string>

    <string name="settings_order_by_oldest_label">Oldest</string>
    <string name="settings_order_by_oldest_value" translatable="false">oldest</string>

    <string name="settings_order_by_relevance_label">Relevance</string>
    <string name="settings_order_by_relevance_value" translatable="false">relevance</string>

    <string name="settings_topic_label">Topic</string>
    <string name="settings_topic_key" translatable="false">news_topic</string>
    <string name="settings_topic_default_value" translatable="false">@string/settings_topic_sport_value</string>

    <string name="settings_topic_sport_label" >Sports</string>
    <string name="settings_topic_sport_value" translatable="false">sport</string>
    <string name="settings_topic_technology_label">Technology</string>
    <string name="settings_topic_technology_value" translatable="false">technology</string>
    <string name="settings_topic_business_label">Business</string>
    <string name="settings_topic_business_value" translatable="false">business</string>
    <string name="settings_topic_culture_label">Culture</string>
    <string name="settings_topic_culture_value" translatable="false">culture</string>
    <string name="settings_topic_books_label">Books</string>
    <string name="settings_topic_books_value" translatable="false">books</string>
    <string name="settings_topic_education_label">Education</string>
    <string name="settings_topic_education_value" translatable="false">education</string>
</resources>
